<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_odom_examples</name>
  <version>0.0.0</version>
  <description>Metapackage for camera odometry example packages.</description>
  <maintainer email="shkwon@tommoro.ai">Sunghyun Kwon</maintainer>
  <license>Proprietary</license>
  <author email="shkwon@tommoro.ai">Sunghyun Kwon</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>camera_odom_rtabmap_examples</exec_depend>
  <exec_depend>camera_odom_isaac_ros_examples</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
