<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_odom_isaac_ros_examples</name>
  <version>0.0.0</version>
  <description>Isaac ROS launch demos for camera odometry experiments.</description>
  <maintainer email="shkwon@tommoro.ai">Sunghyun Kwon</maintainer>
  <license>Proprietary</license>
  <author email="shkwon@tommoro.ai">Sunghyun Kwon</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>isaac_ros_image_proc</exec_depend>
  <exec_depend>isaac_ros_visual_slam</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>zed_components</exec_depend>
  <exec_depend>zed_description</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
