<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_odom_rtabmap_examples</name>
  <version>0.0.0</version>
  <description>RTAB-Map launch demos for camera odometry experiments.</description>
  <maintainer email="shkwon@tommoro.ai">Sunghyun Kwon</maintainer>
  <license>Proprietary</license>
  <author email="shkwon@tommoro.ai">Sunghyun Kwon</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
